--- a/css/app.css
+++ b/css/app.css
@@ -3,12 +3,22 @@ body {
 }
 
 #login-container {
-	width: 400px;
-	margin: 100px auto;
+  width: 400px;
+  margin: 100px auto;
   background-color: #FFFFFF;
   padding: 10px;
   border-radius: 6px;
   box-shadow: 0 0 30px black;
+}
+.dashboard {  
+
+}
+
+.dash-content {  
+  background-color: #FFFFFF;
+  border-radius: 6px;
+  margin: 10px;
+  padding: 10px;
 }
 
 #fileupload{
@@ -60,7 +70,7 @@ div.apartado-container > a > img{
 div.apartado-container > h4{
 	color: #3498db;
 }
-h1 {
+h1, h4 {
 	color: #3498db;
 }
 
