--- a/css/app.css
+++ b/css/app.css
@@ -10,14 +10,14 @@ body {
   border-radius: 6px;
   box-shadow: 0 0 30px black;
 }
-.dashboard {  
-
+.table-hover > tbody > tr:hover > .active{
+  background-color: #B0C8D9 !important;
 }
 
 .dash-content {  
   background-color: #FFFFFF;
   border-radius: 6px;
-  margin: 10px;
+  margin: 5px;
   padding: 10px;
 }
 
