Buscar alumnos y grupos

--- a/css/app.css
+++ b/css/app.css
@@ -71,7 +71,7 @@ div.apartado-container > a > img{
 div.apartado-container > h4{
 	color: #3498db;
 }
-h1, h4 {
+h1, h2, h3, h4 {
 	color: #3498db;
 }
 
