--- a/css/app.css
+++ b/css/app.css
@@ -75,6 +75,11 @@ h1, h2, h3, h4 {
 	color: #3498db;
 }
 
+p.perfil{
+  margin-top: 17px;
+  color: #3498db !important;
+}
+
 .saving-label, .ok-saving-label {
   padding: 5px;
   padding-right: 20px;
