--- a/css/app.css
+++ b/css/app.css
@@ -58,7 +58,9 @@ input.fileupload {
 }
 
 .container{
-	/*background-color: #FFFFFF;*/
+	background-color: #FFFFFF;
+  border-radius: 6px;
+  padding: 10px;
 }
 
 div.apartado-container{
